Do not call msdosfs_sync() on the read-only msdosfs mounts.  In fact, it should be a nop for ro.

PR:	199152
Reviewed by:	bde (PR version of the patch)
Submitted by:	longwitz@incore.de
MFC after:	1 week